- Dark Mode
- Minor bug fixes